# cell-autom

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  cell_autom.cpp  cell_autom.h  game_of_life.cpp  game_of_life.h  main.cpp  ui.cpp  ui.h  window_processor.cpp  window_processor.h
tests/: CMakeLists.txt  game_of_life_test.cpp
